# grain

./: .grain.toml  README.md  VALIDATION.md  pyproject.toml
docs/: CNAME  index.html
grain/: __init__.py  __main__.py  cli.py  config.py  runner.py
grain.egg-info/: PKG-INFO  SOURCES.txt
grain/checks/: __init__.py  base.py  commit_checks.py  custom_checks.py  markdown_checks.py  python_checks.py
grain/hooks/: commit-msg  pre-commit
tests/: test_commit_checks.py  test_config.py  test_custom_checks.py  test_fix.py  test_markdown_checks.py  test_python_checks.py
