[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grain-lint"
version = "0.1.2"
description = "Anti-slop linter for AI-assisted codebases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
grain = "grain.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["grain*"]

[project.urls]
Homepage = "https://grainlinter.com"
Repository = "https://github.com/mmartoccia/grain"

[project.optional-dependencies]
dev = ["pytest>=7"]

# pre-commit framework hook config
# Use in .pre-commit-config.yaml:
# repos:
#   - repo: https://github.com/mmartoccia/grain
#     rev: v0.1.1
#     hooks:
#       - id: grain
